<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mosquito</string>
    <string name="nav_header_title">Mosquito</string>
    <string name="nav_header_subtitle">bzzz</string>

    <string name="title_activity_in_app_browser">In App Browser</string>

    <string name="notizie">News</string>
    <string name="fonti">Sources</string>
    <string name="sorgente">Source</string>
    <string name="impostazioni">Settings</string>
    <string name="elenco_fonti">Sources List</string>
    <string name="aggiungi">Add</string>
    <string name="title_activity_nuova_fonte">Add Soruce</string>
    <string name="link_sito_internet">Website Link</string>
    <string name="desc_nuova_fonte">Paste the source\'s website link. We\'ll try to retrieve the associated feed\'s link.\nIn case of problems try appending a \"/feed\" or \"/rss\" after your website\'s url.</string>
    <string name="ordinamento">Sort news by oldest first</string>
    <string name="nointernet">You have no internet connection</string>
    <string name="errore1_fonte_discover">Could not find a feed at the specified location</string>
    <string name="aggiungi_sorgenti_per_iniziare">Add sources before you start reading news!</string>
    <string name="all">All</string>
    <string name="seleziona_fonti">Select Sources</string>
    <string name="impo_tipo_notizia">News aspect</string>
    <string name="compatto">Compact</string>
    <string name="normale">Normal</string>
    <string name="ampio">Wide</string>
    <string name="visita_pagina_notizia">Open in browser</string>
    <string name="tutte">All</string>
    <string name="non_lette">Not read</string>
    <string name="condividi">Share</string>
    <string name="esterno">External</string>
    <string name="impo_tipo_browser">Preferred browser type</string>
    <string name="attiva_notifiche">Enable notifications</string>
    <string name="disattiva_notifiche">Disable notifications</string>
    <string name="elimina_fonte">Delete Source</string>
    <string name="title_activity_impostazioni_fonte">Source Settings</string>
    <string name="prossimo">Next</string>
    <string name="precedente">Previous</string>
    <string name="aggiunta_fonte">Source added: </string>
</resources>