<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notizie">

    <fragment
        android:id="@+id/nav_notizie"
        android:name="com.example.mosquito.NotizieFragment"
        android:label="@string/notizie"
        tools:layout="@layout/fragment_notizie" />

    <fragment
        android:id="@+id/nav_fonti"
        android:name="com.example.mosquito.FontiFragment"
        android:label="@string/fonti"
        tools:layout="@layout/fragment_fonti" />

    <fragment
        android:id="@+id/nav_impostazioni"
        android:name="com.example.mosquito.ui.impostazioni.ImpostazioniFragment"
        android:label="@string/impostazioni"
        tools:layout="@layout/fragment_impostazioni" />
</navigation>