<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImpostazioniFragment"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:paddingHorizontal="20dp">

    <!--TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:textSize="30dp"
        style="@style/txt"
        android:text="@string/impostazioni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/-->

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ascdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textSize="20sp"
        android:text="@string/ordinamento" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/txt"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/impo_tipo_notizia" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="0dp">

        <RadioButton
            android:id="@+id/radioCompatto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compatto"
            android:textSize="18sp"/>
        <RadioButton
            android:id="@+id/radioNormale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normale"
            android:checked="true"
            android:textSize="18sp"/>
        <RadioButton
            android:id="@+id/radioAmpio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ampio"
            android:textSize="18sp"/>
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/txt"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/impo_tipo_browser" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="0dp">

        <RadioButton
            android:id="@+id/radioFuoriApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esterno"
            android:textSize="18sp"/>
        <RadioButton
            android:id="@+id/radioInApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="In App"
            android:checked="true"
            android:textSize="18sp"/>
    </RadioGroup>

    <!--Spinner
        android:id="@+id/spinnerStileNotizie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="true"
        android:entries="@array/stili_notizie"/-->

</LinearLayout>